<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="DS_XML_Persistent_Deactivate" Id="{13f7e3f0-c517-4682-882f-24f3f2aa2131}">
    <Declaration><![CDATA[TYPE DS_XML_Persistent_Deactivate :
STRUCT
	
         
                                          
	
	DE10100  : BOOL;   // STN 01 ULTRASONIC GENERATOR ON/OFF (-10U1)     
	DE10101  : BOOL;   // STN 02 ULTRASONIC GENERATOR ON/OFF (-11U1)     
	DE10102  : BOOL;   // STN 04 ULTRASONIC GENERATOR ON/OFF (-12U1)     
	DE10103  : BOOL;   // STN 05 ULTRASONIC GENERATOR ON/OFF (-13U1)     
	DE10104  : BOOL;   // STN 07 ULTRASONIC GENERATOR ON/OFF (-14U1)     
	DE10105  : BOOL;   // STN 08 ULTRASONIC GENERATOR ON/OFF (-15U1)     
	DE10106  : BOOL;   // STN 07 DI WATER RETURN TANK PUMP ON/OFF (-81K1)
	DE10107  : BOOL;   // STN 01 PROCESS TANK PUMP ON/OFF (-73K1)        
	DE10108  : BOOL;   // STN 02 PROCESS TANK PUMP ON/OFF (-74K1)        
	DE10109  : BOOL;   // STN 03 PROCESS TANK PUMP ON/OFF (-75K1)        
	DE10110  : BOOL;   // STN 04 PROCESS TANK PUMP ON/OFF (-76K1)        
	DE10111  : BOOL;   // STN 05 PROCESS TANK PUMP ON/OFF (-77K1)        
	DE10112  : BOOL;   // STN 06 PROCESS TANK PUMP ON/OFF (-78K1)        
	DE10113  : BOOL;   // STN 07 PROCESS TANK PUMP ON/OFF (-79K1)        
	DE10114  : BOOL;   // STN 08 PROCESS TANK PUMP ON/OFF (-80K1)        
	DE10115  : BOOL;   // STN 01 PROCESS TANK HEATER ON/OFF (-130K1)     
	
	DE10200  : BOOL;   // STN 02 PROCESS TANK HEATER ON/OFF (-131K1) 
	DE10201  : BOOL;   // STN 03 PROCESS TANK HEATER ON/OFF (-132K1) 
	DE10202  : BOOL;   // STN 04 PROCESS TANK HEATER ON/OFF (-133K1) 
	DE10203  : BOOL;   // STN 05 PROCESS TANK HEATER ON/OFF (-134K1) 
	DE10204  : BOOL;   // STN 06 PROCESS TANK HEATER ON/OFF (-135K1) 
	DE10205  : BOOL;   // STN 07 PROCESS TANK HEATER ON/OFF (-136K1) 
	DE10206  : BOOL;   // STN 08 PROCESS TANK HEATER ON/OFF (-137K1) 
	DE10207  : BOOL;   // STN 10 PROCESS TANK HEATER ON/OFF (-138K1) 
	DE10208  : BOOL;   // STN 09 - STN 10 FFU UNIT ON/OFF (-163K1)   
	DE10209  : BOOL;   // UNLOADING FFU UNIT ON/OFF (-164K1)         
	DE10210  : BOOL;   // UNLOADING CONVEYOR FFU UNIT ON/OFF (-165K1)
	DE10211  : BOOL;   // STN 09 PROCESS TANK PUMP ON/OFF (-82K1)    

	DE10300  : BOOL;   // STN 01 - 08 AGITATION MOTOR ON/OFF (-160K1)
//	DE10301  : BOOL;   // LOADING CONVEYOR 01 ON/OFF (-170K1)        
//	DE10302  : BOOL;   // LOADING CONVEYOR 02 ON/OFF (-171K1)        
//	DE10303  : BOOL;   // LOADING CONVEYOR 03 ON/OFF (-172K1)        
//	DE10304  : BOOL;   // LOADING CONVEYOR 04 ON/OFF (-173K1)        
//	DE10305  : BOOL;   // UNLOADING CONVEYOR 01 ON/OFF (-174K1)      
//	DE10306  : BOOL;   // UNLOADING CONVEYOR 02 ON/OFF (-175K1)      
//	DE10307  : BOOL;   // UNLOADING CONVEYOR 03 ON/OFF (-176K1)      
//	DE10308  : BOOL;   // UNLOADING CONVEYOR 04 ON/OFF (-177K1)                  
	                    
	
	DE11100  : BOOL;   // STN 03 MEGASONIC GENERATOR 01 ON/OFF (-16U1)
	DE11101  : BOOL;   // STN 03 MEGASONIC GENERATOR 02 ON/OFF (-17U1)
	DE11102  : BOOL;   // STN 01 DOSING PUMP ON/OFF (-70K1)           
	DE11103  : BOOL;   // STN 03 DOSING PUMP ON/OFF (-71K1)           
                      
	
	DE12000  : BOOL;   // STN 05 DOSING PUMP ON/OFF (-72K1)           
	DE12001  : BOOL;   // STN 06 MEGASONIC GENERATOR 01 ON/OFF (-18U1)
	DE12002  : BOOL;   // STN 06 MEGASONIC GENERATOR 02 ON/OFF (-19U1)
	DE12003  : BOOL;   // STN 06 MEGASONIC GENERATOR 03 ON/OFF (-20U1)
                         

                                  


END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>