<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="AgitationMechanismCtrl" Id="{570547af-8638-48a5-b40c-7c158b69612b}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM AgitationMechanismCtrl
VAR

	fbV2StnAgitationCtrl1: fbV2_AgitationMechanismCtrl;
	fbV2StnAgitationCtrl2: fbV2_AgitationMechanismCtrl;

	iStnAgitation1DelayOffTimerEV: INT;
	iStnAgitation2DelayOffTimerEV: INT;
  btestVSCode : INT;

END_VAR]]></Declaration>
    <Implementation>
      <NWL>
        <XmlArchive>
          <Data>
            <o xml:space="preserve" t="NWLImplementationObject">
              <v n="NetworkListComment">""</v>
              <v n="DefaultViewMode">"Ld"</v>
              <l2 n="NetworkList" cet="Network">
                <o>
                  <v n="ILActive">false</v>
                  <v n="FBDValid">false</v>
                  <v n="ILValid">false</v>
                  <l2 n="ILLines" />
                  <v n="Comment">""</v>
                  <v n="Title">""</v>
                  <v n="Label">""</v>
                  <v n="OutCommented">false</v>
                  <l2 n="NetworkItems" cet="BoxTreeAssign">
                    <o>
                      <o n="OutputItems" t="OutputItemList">
                        <l2 n="OutputItems" cet="Operand">
                          <o>
                            <v n="Operand">"ARwDO[eY10300_Stn01_08AgitationMotorOn_Off].00"</v>
                            <v n="Type">"BOOL"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">33L</v>
                          </o>
                        </l2>
                      </o>
                      <o n="Flags" t="Flags">
                        <v n="Flags">0</v>
                        <v n="Fixed">true</v>
                        <v n="Extensible">false</v>
                      </o>
                      <o n="RValue" t="BoxTreeBox">
                        <v n="BoxType">"fbV2_AgitationMechanismCtrl"</v>
                        <o n="Instance" t="Operand">
                          <v n="Operand">"fbV2StnAgitationCtrl1"</v>
                          <v n="Type">"fbV2_AgitationMechanismCtrl"</v>
                          <v n="Comment">""</v>
                          <v n="SymbolComment">""</v>
                          <v n="Address">""</v>
                          <o n="Flags" t="Flags">
                            <v n="Flags">0</v>
                            <v n="Fixed">false</v>
                            <v n="Extensible">false</v>
                          </o>
                          <v n="LValue">false</v>
                          <v n="Boolean">false</v>
                          <v n="IsInstance">true</v>
                          <v n="Id">12L</v>
                        </o>
                        <o n="OutputItems" t="OutputItemList">
                          <l2 n="OutputItems" cet="Operand">
                            <n />
                            <o>
                              <v n="Operand">"iStnAgitation1DelayOffTimerEV"</v>
                              <v n="Type">"INT"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">true</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">14L</v>
                            </o>
                          </l2>
                        </o>
                        <o n="Flags" t="Flags">
                          <v n="Flags">0</v>
                          <v n="Fixed">true</v>
                          <v n="Extensible">false</v>
                        </o>
                        <n n="InputFlags" />
                        <l2 n="InputItems">
                          <o t="BoxTreeOperand">
                            <o n="Operand" t="Operand">
                              <v n="Operand">"TRUE"</v>
                              <v n="Type">"BOOL"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">16L</v>
                            </o>
                            <v n="Id">15L</v>
                          </o>
                          <o t="BoxTreeOperand">
                            <o n="Operand" t="Operand">
                              <v n="Operand">"bAutoStartPb"</v>
                              <v n="Type">"BOOL"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">18L</v>
                            </o>
                            <v n="Id">17L</v>
                          </o>
                          <o t="BoxTreeOperand">
                            <o n="Operand" t="Operand">
                              <v n="Operand">"ARdsEventCtrl[5].bEventOutput"</v>
                              <v n="Type">"BOOL"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">20L</v>
                            </o>
                            <v n="Id">19L</v>
                          </o>
                          <o t="BoxTreeOperand">
                            <o n="Operand" t="Operand">
                              <v n="Operand">"EmergencyStop"</v>
                              <v n="Type">"BOOL"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">22L</v>
                            </o>
                            <v n="Id">21L</v>
                          </o>
                          <o t="BoxTreeBox">
                            <v n="BoxType">"OR"</v>
                            <o n="Instance" t="Operand">
                              <n n="Operand" />
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">true</v>
                              <v n="Id">23L</v>
                            </o>
                            <o n="OutputItems" t="OutputItemList">
                              <l2 n="OutputItems" />
                            </o>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">true</v>
                              <v n="Extensible">false</v>
                            </o>
                            <n n="InputFlags" />
                            <l2 n="InputItems" cet="BoxTreeOperand">
                              <o>
                                <o n="Operand" t="Operand">
                                  <v n="Operand">"DSStnBasketInfo[1].bAvailibility"</v>
                                  <v n="Type">"BOOL"</v>
                                  <v n="Comment">""</v>
                                  <v n="SymbolComment">""</v>
                                  <v n="Address">""</v>
                                  <o n="Flags" t="Flags">
                                    <v n="Flags">0</v>
                                    <v n="Fixed">true</v>
                                    <v n="Extensible">false</v>
                                  </o>
                                  <v n="LValue">false</v>
                                  <v n="Boolean">false</v>
                                  <v n="IsInstance">false</v>
                                  <v n="Id">26L</v>
                                </o>
                                <v n="Id">25L</v>
                              </o>
                              <o>
                                <o n="Operand" t="Operand">
                                  <v n="Operand">"DSStnBasketInfo[2].bAvailibility"</v>
                                  <v n="Type">"BOOL"</v>
                                  <v n="Comment">""</v>
                                  <v n="SymbolComment">""</v>
                                  <v n="Address">""</v>
                                  <o n="Flags" t="Flags">
                                    <v n="Flags">0</v>
                                    <v n="Fixed">true</v>
                                    <v n="Extensible">false</v>
                                  </o>
                                  <v n="LValue">false</v>
                                  <v n="Boolean">false</v>
                                  <v n="IsInstance">false</v>
                                  <v n="Id">28L</v>
                                </o>
                                <v n="Id">27L</v>
                              </o>
                              <o>
                                <o n="Operand" t="Operand">
                                  <v n="Operand">"DSStnBasketInfo[3].bAvailibility"</v>
                                  <v n="Type">"BOOL"</v>
                                  <v n="Comment">""</v>
                                  <v n="SymbolComment">""</v>
                                  <v n="Address">""</v>
                                  <o n="Flags" t="Flags">
                                    <v n="Flags">0</v>
                                    <v n="Fixed">true</v>
                                    <v n="Extensible">false</v>
                                  </o>
                                  <v n="LValue">false</v>
                                  <v n="Boolean">true</v>
                                  <v n="IsInstance">false</v>
                                  <v n="Id">45L</v>
                                </o>
                                <v n="Id">44L</v>
                              </o>
                              <o>
                                <o n="Operand" t="Operand">
                                  <v n="Operand">"DSStnBasketInfo[4].bAvailibility"</v>
                                  <v n="Type">"BOOL"</v>
                                  <v n="Comment">""</v>
                                  <v n="SymbolComment">""</v>
                                  <v n="Address">""</v>
                                  <o n="Flags" t="Flags">
                                    <v n="Flags">0</v>
                                    <v n="Fixed">true</v>
                                    <v n="Extensible">false</v>
                                  </o>
                                  <v n="LValue">false</v>
                                  <v n="Boolean">true</v>
                                  <v n="IsInstance">false</v>
                                  <v n="Id">47L</v>
                                </o>
                                <v n="Id">46L</v>
                              </o>
                              <o>
                                <o n="Operand" t="Operand">
                                  <v n="Operand">"DSStnBasketInfo[5].bAvailibility"</v>
                                  <v n="Type">"BOOL"</v>
                                  <v n="Comment">""</v>
                                  <v n="SymbolComment">""</v>
                                  <v n="Address">""</v>
                                  <o n="Flags" t="Flags">
                                    <v n="Flags">0</v>
                                    <v n="Fixed">true</v>
                                    <v n="Extensible">false</v>
                                  </o>
                                  <v n="LValue">false</v>
                                  <v n="Boolean">true</v>
                                  <v n="IsInstance">false</v>
                                  <v n="Id">49L</v>
                                </o>
                                <v n="Id">48L</v>
                              </o>
                              <o>
                                <o n="Operand" t="Operand">
                                  <v n="Operand">"DSStnBasketInfo[6].bAvailibility"</v>
                                  <v n="Type">"BOOL"</v>
                                  <v n="Comment">""</v>
                                  <v n="SymbolComment">""</v>
                                  <v n="Address">""</v>
                                  <o n="Flags" t="Flags">
                                    <v n="Flags">0</v>
                                    <v n="Fixed">true</v>
                                    <v n="Extensible">false</v>
                                  </o>
                                  <v n="LValue">false</v>
                                  <v n="Boolean">true</v>
                                  <v n="IsInstance">false</v>
                                  <v n="Id">55L</v>
                                </o>
                                <v n="Id">54L</v>
                              </o>
                              <o>
                                <o n="Operand" t="Operand">
                                  <v n="Operand">"DSStnBasketInfo[7].bAvailibility"</v>
                                  <v n="Type">"BOOL"</v>
                                  <v n="Comment">""</v>
                                  <v n="SymbolComment">""</v>
                                  <v n="Address">""</v>
                                  <o n="Flags" t="Flags">
                                    <v n="Flags">0</v>
                                    <v n="Fixed">true</v>
                                    <v n="Extensible">false</v>
                                  </o>
                                  <v n="LValue">false</v>
                                  <v n="Boolean">true</v>
                                  <v n="IsInstance">false</v>
                                  <v n="Id">53L</v>
                                </o>
                                <v n="Id">52L</v>
                              </o>
                              <o>
                                <o n="Operand" t="Operand">
                                  <v n="Operand">"DSStnBasketInfo[8].bAvailibility"</v>
                                  <v n="Type">"BOOL"</v>
                                  <v n="Comment">""</v>
                                  <v n="SymbolComment">""</v>
                                  <v n="Address">""</v>
                                  <o n="Flags" t="Flags">
                                    <v n="Flags">0</v>
                                    <v n="Fixed">true</v>
                                    <v n="Extensible">false</v>
                                  </o>
                                  <v n="LValue">false</v>
                                  <v n="Boolean">true</v>
                                  <v n="IsInstance">false</v>
                                  <v n="Id">51L</v>
                                </o>
                                <v n="Id">50L</v>
                              </o>
                            </l2>
                            <o n="InputParam" t="ParamList">
                              <l2 n="Names" />
                              <l2 n="Types" />
                            </o>
                            <o n="OutputParam" t="ParamList">
                              <l2 n="Names" />
                              <l2 n="Types" />
                            </o>
                            <v n="CallType" t="Operator">Or</v>
                            <n n="EN" />
                            <n n="ENO" />
                            <n n="STSnippet" />
                            <v n="ContainsExtensibleInputs">false</v>
                            <v n="ProvidesSTSnippet">false</v>
                            <v n="Id">24L</v>
                          </o>
                          <o t="BoxTreeOperand">
                            <o n="Operand" t="Operand">
                              <v n="Operand">"DE10300"</v>
                              <v n="Type">"BOOL"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">30L</v>
                            </o>
                            <v n="Id">29L</v>
                          </o>
                          <o t="BoxTreeOperand">
                            <o n="Operand" t="Operand">
                              <v n="Operand">"iStnAgitation1DelayOffTimerSV_min"</v>
                              <v n="Type">"INT"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">32L</v>
                            </o>
                            <v n="Id">31L</v>
                          </o>
                        </l2>
                        <o n="InputParam" t="ParamList">
                          <l2 n="Names" cet="String">
                            <v>EN</v>
                            <v>bEn</v>
                            <v>bAgitationAlarmOutput</v>
                            <v>bEstop</v>
                            <v>bBasketAvailability</v>
                            <v>bDeactivatedMode</v>
                            <v>iAgitationDelayOffTimerSV_min</v>
                          </l2>
                          <l2 n="Types" cet="String">
                            <v>BOOL</v>
                            <v>BOOL</v>
                            <v>BOOL</v>
                            <v>BOOL</v>
                            <v>BOOL</v>
                            <v>BOOL</v>
                            <v>INT</v>
                          </l2>
                        </o>
                        <o n="OutputParam" t="ParamList">
                          <l2 n="Names" cet="String">
                            <v>bAgitationOutput</v>
                            <v>iAgitationDelayOffTimerEV</v>
                          </l2>
                          <l2 n="Types" cet="String">
                            <v>BOOL</v>
                            <v>INT</v>
                          </l2>
                        </o>
                        <v n="CallType" t="Operator">FunctionBlock</v>
                        <n n="EN" />
                        <n n="ENO" />
                        <n n="STSnippet" />
                        <v n="ContainsExtensibleInputs">false</v>
                        <v n="ProvidesSTSnippet">false</v>
                        <v n="Id">13L</v>
                      </o>
                      <v n="Id">34L</v>
                    </o>
                  </l2>
                  <l2 n="Connectors" />
                  <v n="Id">11L</v>
                </o>
              </l2>
              <v n="BranchCounter">0</v>
              <v n="ValidIds">true</v>
            </o>
          </Data>
          <TypeList>
            <Type n="Boolean">System.Boolean</Type>
            <Type n="BoxTreeAssign">{9873c309-1f09-4ebf-9078-42d8057ef11b}</Type>
            <Type n="BoxTreeBox">{acfc6f68-8e3a-4af5-bf81-3dd512095a46}</Type>
            <Type n="BoxTreeOperand">{9de7f100-1b87-424c-a62e-45b0cfc85ed2}</Type>
            <Type n="Flags">{668066f2-6069-46b3-8962-8db8d13d7db2}</Type>
            <Type n="Int32">System.Int32</Type>
            <Type n="Int64">System.Int64</Type>
            <Type n="Network">{d9a99d73-b633-47db-b876-a752acb25871}</Type>
            <Type n="NWLImplementationObject">{25e509de-33d4-4447-93f8-c9e4ea381c8b}</Type>
            <Type n="Operand">{c9b2f165-48a2-4a45-8326-3952d8a3d708}</Type>
            <Type n="Operator">{bffb3c53-f105-4e85-aba2-e30df579d75f}</Type>
            <Type n="OutputItemList">{f40d3e09-c02c-4522-a88c-dac23558cfc4}</Type>
            <Type n="ParamList">{71496971-9e0c-4677-a832-b9583b571130}</Type>
            <Type n="String">System.String</Type>
          </TypeList>
        </XmlArchive>
      </NWL>
    </Implementation>
  </POU>
</TcPlcObject>